frontend/test/should_pass/empty_001.grg
rule empty_1 {

	replace {
	}
}

